hello-service/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-microservice
spec:
  selector:
    app: node-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
