hello-service/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: node-gateway
  namespace: demo
spec:
  selector:
    istio: ingressgateway # must match the label in istio-ingressgateway service
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: node-microservice
  namespace: demo
spec:
  hosts:
  - "*"
  gateways:
  - node-gateway
  http:
  - match:
    - uri:
        prefix: /hello
    route:
    - destination:
        host: node-microservice.demo.svc.cluster.local
        port:
          number: 80 # Change if your Node app uses a different port
